--- a/public/pages/login/loginEn.css
+++ b/public/pages/login/loginEn.css
@@ -53,7 +53,7 @@ header svg{
   color: #000;
 }
 header button{
-  width: 100px;
+  width: 110px;
   height: 40px;
   border: 0;
   border-radius: 5px;
@@ -167,6 +167,10 @@ form a{
   font-size: 15px;
   margin-top: 15px;
   margin-bottom: 15px;
+}
+.login-input-container{
+  text-align: start;
+  width: 100%;
 }
 .form-label{
   color: #000;
