--- a/public/pages/login/login.css
+++ b/public/pages/login/login.css
@@ -29,21 +29,22 @@
 }
 body{
   font-family: 'Gotham SSm A', sans-serif;
+  display: block;
   overflow: hidden;
 }
 header{
+  padding: 20px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  width: 100%;
+  max-height: 50px;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  max-height: 50px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px 0;
   z-index: 100;
-  color: #000;
+  font-size: 14px;
 }
 header svg{
   width: 120px;
@@ -79,13 +80,13 @@ header button i{
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 20%;
+  width:300px;
   height: 100vh;
   background-color: #eee;
   color: #000;
   position: absolute;
   top: 0;
-  right: -300px;
+  right: -400px;
   z-index: 100;
   border: 1px solid lightgray;
   transition: all 0.5s ease;
@@ -143,6 +144,7 @@ main{
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  text-align: center;
   height: 100vh;
   margin-top: 46px;
 }
@@ -153,6 +155,7 @@ form{
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  text-align: start;
 }
 form h1{
   font-size: 35px;
@@ -229,4 +232,16 @@ form b{
 .create-account:hover{
   transition: 0.3s ease-in-out;
   background-color: rgb(221, 221, 221);
+}
+@media screen and (max-widht: 500px) {
+  main{
+    background-color: #000;
+  }
+  .right-zone-lenguage{
+    display: none;
+  }
+  body.active .right-zone-lenguage{
+    display: flex;
+    right: 0;
+  }
 }
